plugins {
  id 'java-library'
  id 'eclipse'
}

repositories {
  mavenCentral()
  maven { url 'https://papermc.io/repo/repository/maven-public/' }
  maven { url 'https://jitpack.io' }
}

dependencies {
  compileOnly group: 'com.destroystokyo.paper', name: 'paper-api', version: '1.16.5-R0.1-SNAPSHOT'
  compileOnly group: 'com.github.TownyAdvanced', name: 'Towny', version: '0.97.0.14'
}

java {
  withJavadocJar()
  withSourcesJar()
}

java.toolchain.languageVersion = JavaLanguageVersion.of(16)
version = '1.0.0'
group = 'it.ancientrealms'
compileJava.options.encoding = "UTF-8"
